# Track_test

./: .gitignore  Configuration_Management_Plan.md  README.md  Report.md  Task 2.md  Task 3.md  Task 6.md  Task 8.md  Task 9,md  Task_5.md  check_and_clear_data.py  cleanup.py  complete_rag_llm_implementation.md  immediate_implementation_steps.md  pyproject.toml  pytest.ini  rag_optimization_plan.md  rag_pipeline_integration.py  requirements.txt  sample_market_data.json  sample_property_listings.json  smart_search_implementation.py  trackrealities_prompt_engineering_doc.md
agents/: README.md  __init__.py  base.py  buyer.py  developer.py  investor.py  legacy_tools.py  roles.py
analytics/: cma_engine.py  financial_engine.py  investor.py  services.py
api/: models.py
api/routes/: agents.py  analytics.py  conversation.py  health.py  market.py  property.py  rag.py  session.py
cache/embeddings/: text-embedding-3-small_cache.pkl
logs/errors/: 20250725_191846_2192850e.json  20250725_191849_c1810ce7.json  20250725_191852_15fa644a.json  20250725_191854_e390385c.json  20250725_191856_141612d4.json  20250725_191859_efcd1c69.json  20250725_191902_e957d728.json  20250725_200618_4a045f7b.json  20250725_200619_b81581f6.json  20250725_200621_c007177b.json  20250725_200622_110b6774.json  20250725_200624_680e92e6.json  20250725_200625_6dc030cd.json  20250725_200626_c31bdc10.json  20250725_200628_0ba22db4.json  20250725_200629_0bd7e290.json  20250725_200630_99fedc98.json  20250725_200632_b573aeb0.json  20250725_200743_b49b71e1.json  20250725_200744_7b499148.json  20250725_200745_fbd2b8e6.json  20250725_200746_b9734559.json  20250725_200747_41ef4bdf.json  20250725_200748_f79fe054.json  20250725_200749_b79900dc.json  20250725_200750_851d0cd7.json  20250725_200751_782cd016.json  20250725_200751_92207424.json  20250725_200752_e06789af.json  20250725_201252_1ea190e7.json  20250725_201253_e82b4e0d.json  20250725_201254_1843d67e.json  20250725_201255_54595618.json  20250725_201256_7d697ba4.json  20250725_201257_69a06ee6.json  20250725_201258_cd78c6d5.json  20250725_201835_7321e0b4.json  20250725_201836_3e86fa18.json  20250725_201837_e8f6bcf1.json  20250725_201838_5539e212.json  (+101 more)
scripts/: e2e_test_suite.py  fine_tune_models.py  prepare_training_data.py  smart_search_example.py
sql/: Fixed.sql  enhanced_schema.sql  new_schema.sql  schema.sql
src/: data_preparation.py  fine_tuning.py
src/trackrealties/: __init__.py  cli.py  run_ingestion.py
src/trackrealties/agents/: __init__.py  agent.py  base.py  buyer.py  context.py  developer.py  factory.py  investor.py  investor_README.md  orchestrator.py  prompts.py  tools.py
src/trackrealties/analytics/: __init__.py  agent.py  cma_engine.py  financial_metrics.py  market_intelligence.py  search.py
src/trackrealties/api/: __init__.py  dependencies.py  main.py  middleware.py  models.py
src/trackrealties/api/routes/: agents.py  analytics.py  chat.py  conversation.py  health.py  market.py  property.py  rag.py
src/trackrealties/cli/: __init__.py  __main__.py  enhanced_commands.py
src/trackrealties/core/: config.py  database.py  exceptions.py  graph.py  health.py  llm.py  logging.py
src/trackrealties/data/: README.md  conversation_repository.py  database_integration.py  enhanced_ingestion_pipeline.py  error_logging.py  repository.py  transformation.py
src/trackrealties/data/chunking/: __init__.py  chunk.py  enhanced_semantic_chunker.py  generic_chunker.py  json_chunker.py  market_chunker.py  property_chunker.py  utils.py
src/trackrealties/data/embedding/: __init__.py  cache.py  embedder.py  openai_embedder.py  optimized_embedder.py
src/trackrealties/data/graph/: __init__.py  error_handler.py  formatters.py  graph_builder.py  models.py  relationship_manager.py
src/trackrealties/data/utils/: __init__.py  field_mapping.py
src/trackrealties/models/: agent.py  api.py  base.py  conversation.py  db.py  enums.py  financial.py  market.py  property.py  search.py  session.py
src/trackrealties/rag/: README.md  __init__.py  base_enhanced_pipeline.py  context.py  context_manager.py  embedders.py  enhanced_rag_pipeline.py  entity_extractor.py  external.py  intelligent_router.py  optimized_pipeline.py  pipeline.py  rag_pipeline_integration.py  router.py  search.py  smart_search.py  synthesizer.py  tools.py  validation.py
src/trackrealties/validation/: __init__.py  base.py  hallucination.py  price_validator.py  roi_validator.py
tests/: conftest.py  temp_agent_chat_test.py  temp_analytics_test.py  temp_chat_request.py  temp_chat_test.py  temp_dallas_request.py  temp_developer_request.py  temp_health_check.py  temp_investor_request.py  temp_real_api_test.py  temp_session_request.py  temp_session_test.py  test_agent_agent.py  test_api.py  test_buyer_agent.py  test_chat_endpoint.py  test_context_manager.py  test_developer_agent.py  test_enhanced_rag_pipeline.py  test_greetings_endpoints.py  test_hallucination_detector.py  test_intelligent_query_router.py  test_investor_agent.py  test_real_estate_hallucination_detector.py
